--- a/views/pantallaview.css
+++ b/views/pantallaview.css
@@ -1,3 +1,14 @@
 .pantalla {
-    background-color: red;
+    height: 20rem;
+    background-color: rgb(209, 209, 209);
+    padding: 1rem;
+
+    font-size: 5rem;
+    font-weight: 600;
+    
+
+    display: flex;
+    align-items: end;
+    justify-content: right;
+
 }
