--- a/views/tecladoViews.css
+++ b/views/tecladoViews.css
@@ -1,6 +1,6 @@
 .teclado {
     padding: 1rem;
-    
+    background-color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(5,9rem);
@@ -9,7 +9,7 @@
 
 .teclas {
     font-size: 3rem;
-    border: 1px solid gray;
+    border: 1px solid rgb(110, 202, 255);
     border-radius: 3px;
 
     display: flex;
@@ -18,7 +18,7 @@
     cursor: pointer;
 }
 .teclas:hover {
-    background-color: greenyellow;
+    background-color: rgb(0, 217, 255);
 
 }
 
